# DRG

./: .gitignore  README.md  codebook.toml  justfile  pyproject.toml
client/: index.html  package-lock.json  package.json  vite.config.ts
client/src/: App.vue  ControlBar.vue  main.ts  shims-vue.d.ts
client/src/api/: index.ts  sdk.gen.ts  types.gen.ts
client/src/common/: global.scss
client/src/components/: AppTooltip.vue  DropDownMenu.vue
client/src/router/: index.ts
client/src/stores/: auth.ts
client/src/types/: auth.ts
client/src/views/: DRG.vue  Doc.vue  DocGen.vue  Home.vue
docs/: 认证逻辑.md
server/: .gitignore  config.py  main.py  pyproject.toml  static.py
server/agent/: api.py  table.py
server/agent/docgen_agent/: API.md  LAYOUT.md  README.md  SCHEMA.md  TOOLS_INSTRUCTION.md  api.py  output_layout.json  output_schema.json  requirement.md  tools.py  workflow.py
server/agent/drg_agent/: MCC_and_CC.json  MCC_and_CC_test.json  __main__.py  api.py  diagnosis_to_mdc.json  drg_rules.json  models.py  procedure_to_adrg.json  task.py  workflow.py
server/api/: __init__.py  hello.py
server/db/: __init__.py  tables.py  utils.py
server/docgen_agent/: API.md  TOOLS_INSTRUCTION.md  api.py  output_layout.json  output_schema.json  table.py  tools.py  workflow.py
server/docgen_agent/agent_input/: output_layout.json  output_schema.json
server/docgen_agent/dev_docs/: API.md  ASYNC_CONCURRENCY.md  (+5 more)
server/drg_agent/: api.py  models.py  table.py  task.py
server/knowledge_base/: api.py  summary.py  table.py
server/script/: runner.py
server/storage/: __init__.py  tables.py
server/user/: api.py  auth.py  table.py
(+37 files in other folders)
